--- a/src/ensembles/420_ArbolesAzarososOptimizado.ipynb
+++ b/src/ensembles/420_ArbolesAzarososOptimizado.ipynb
@@ -386,14 +386,14 @@
       "source": [
         "# carpeta de trabajo\n",
         "setwd(\"/content/buckets/b1/exp\")\n",
-        "experimento <- \"exp4020\"\n",
+        "experimento <- \"exp420_bo\"\n",
         "dir.create(experimento, showWarnings=FALSE)\n",
         "setwd( paste0(\"/content/buckets/b1/exp/\", experimento ))"
       ],
       "metadata": {
         "id": "1gZD6ZMvCPRV"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -405,7 +405,7 @@
       "metadata": {
         "id": "Xi0emX2ECPRV"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -421,7 +421,7 @@
       "metadata": {
         "id": "RA3cSJ6KaGwA"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -434,7 +434,7 @@
       "metadata": {
         "id": "EByLkVMwaC8K"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
       "metadata": {
         "id": "rHMrHwwpaB8D"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -459,18 +459,7 @@
       "metadata": {
         "id": "bJHS2aeghw6I"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "set.seed(PARAM$semilla_primigenia) # Establezco la semilla aleatoria"
-      ],
-      "metadata": {
-        "id": "H_DGUB_fhzHr"
-      },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -544,10 +533,113 @@
         "format(Sys.time(), \"%a %b %d %X %Y\")"
       ],
       "metadata": {
-        "id": "lgmvRHcfJpls"
+        "id": "lgmvRHcfJpls",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9b63be64-13d1-4707-fb94-427de18b9c1d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "'Mon Oct 27 01:26:25 AM 2025'"
+            ],
+            "text/markdown": "'Mon Oct 27 01:26:25 AM 2025'",
+            "text/latex": "'Mon Oct 27 01:26:25 AM 2025'",
+            "text/plain": [
+              "[1] \"Mon Oct 27 01:26:25 AM 2025\""
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "require(\"data.table\")\n",
+        "require(\"rpart\")\n",
+        "require(\"parallel\")\n",
+        "\n",
+        "if( !require(\"DiceKriging\") ) install.packages(\"DiceKriging\")\n",
+        "require(\"DiceKriging\")\n",
+        "if( ! require(\"rlist\") ) install.packages(\"rlist\")\n",
+        "require(\"rlist\")\n",
+        "if( !require(\"mlrMBO\") ) install.packages(\"mlrMBO\")\n",
+        "require(\"mlrMBO\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qGdZKxo-R2p6",
+        "outputId": "f4c6ea13-d7c5-4406-8484-c671d784464d"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Loading required package: parallel\n",
+            "\n",
+            "Loading required package: DiceKriging\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘DiceKriging’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Loading required package: DiceKriging\n",
+            "\n",
+            "Loading required package: rlist\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘rlist’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependency ‘XML’\n",
+            "\n",
+            "\n",
+            "Loading required package: rlist\n",
+            "\n",
+            "Loading required package: mlrMBO\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘mlrMBO’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependencies ‘fastmatch’, ‘RcppArmadillo’, ‘mlr’, ‘ParamHelpers’, ‘smoof’, ‘BBmisc’, ‘checkmate’, ‘lhs’, ‘parallelMap’\n",
+            "\n",
+            "\n",
+            "Loading required package: mlrMBO\n",
+            "\n",
+            "Loading required package: mlr\n",
+            "\n",
+            "Loading required package: ParamHelpers\n",
+            "\n",
+            "Loading required package: smoof\n",
+            "\n",
+            "Loading required package: checkmate\n",
+            "\n",
+            "\n",
+            "Attaching package: ‘checkmate’\n",
+            "\n",
+            "\n",
+            "The following object is masked from ‘package:DiceKriging’:\n",
+            "\n",
+            "    checkNames\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -723,15 +815,24 @@
       "metadata": {
         "id": "limXOsjVBjV3"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#\n",
-        "#\n",
-        "#\n",
+        "PARAM <- list()\n",
+        "PARAM$semilla_primigenia <- 191717\n",
+        "\n",
+        "# parametros  arbol\n",
+        "# entreno cada arbol con solo 50% de las variables variables\n",
+        "#  por ahora, es fijo\n",
+        "PARAM$feature_fraction <- 0.5\n",
+        "\n",
+        "# voy a generar 32 arboles,\n",
+        "#  a mas arboles mas tiempo de proceso y MEJOR MODELO,\n",
+        "#  pero ganancias marginales\n",
+        "PARAM$num_trees_max <- 32\n",
         "\n",
         "ArbolesAzarosos <- function(iteracion, x) {\n",
         "\n",
@@ -741,10 +842,16 @@
         "\n",
         "  set.seed(PARAM$semilla_primigenia)\n",
         "  cat(\"Iteracion: \", iteracion, \"\\n\")\n",
-        "  cat(\"Params: \", x, \"\\n\")\n",
+        "  cat(\"Params: \", paste0(\"cp=\", x$cp, \"  minsplit=\", x$minsplit, \"  minbucket=\", x$minbucket, \" maxdepth=\", x$maxdepth, \"\" ), \"\\n\")\n",
+        "  flush.console()\n",
+        "\n",
+        "  seq(PARAM$num_trees_max)\n",
+        "\n",
+        "  arbolito <- 1\n",
         "\n",
         "  for (arbolito in seq(PARAM$num_trees_max) ) {\n",
-        "    cat( arbolito, \" \")\n",
+        "    cat( arbolito, \"\")\n",
+        "    flush.console()\n",
         "    qty_campos_a_utilizar <- as.integer(length(campos_buenos)\n",
         "      * PARAM$feature_fraction)\n",
         "\n",
@@ -772,6 +879,8 @@
         "    tb_prediccion[, prob_acumulada := prob_acumulada + prediccion[, \"BAJA+2\"]]\n",
         "\n",
         "  }\n",
+        "  cat(\"finalizo construccion de arbolitos\\n\")\n",
+        "  flush.console()\n",
         "\n",
         "  # reporto ganancia\n",
         "  umbral_corte <- (1 / 40) * PARAM$num_trees_max\n",
@@ -796,13 +905,15 @@
         "                        max_submit_attempts = 5,\n",
         "                        max_poll_attempts = 5,\n",
         "                        wait_seconds = 60)\n",
-        "  return score;\n",
+        "  cat(\"score reportado: \", score, \"\\n\")\n",
+        "  flush.console()\n",
+        "  score\n",
         "}"
       ],
       "metadata": {
         "id": "TW-0H9us1j4m"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -873,7 +984,7 @@
       "metadata": {
         "id": "lOVzHECRNUkm"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -885,7 +996,7 @@
         "PARAM <- list()\n",
         "\n",
         "PARAM$semilla_primigenia <- 191717\n",
-        "PARAM$experimento <- \"HT310\"\n",
+        "#PARAM$experimento <- \"HT420\"\n",
         "\n",
         "PARAM$BO_iter <- 40 #cantidad de iteraciones de la Bayesian Optimization\n",
         "\n",
@@ -981,10 +1092,34 @@
         "print(PARAM$out$lgbm$mejores_hiperparametros)"
       ],
       "metadata": {
-        "id": "rUEdsTQsM-Ka"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rUEdsTQsM-Ka",
+        "outputId": "4382cb95-bd8a-4b10-c399-52f70eb05ae4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Computing y column(s) for design. Not provided.\n",
+            "\n",
+            "Mon Oct 27 01:53:35 AM 2025\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Iteracion:  1 \n",
+            "Params:  cp=-0.190153969467792  minsplit=6173  minbucket=430 maxdepth=5 \n",
+            "finalizo construccion de arbolitos\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
