--- a/src/ensembles/420_ArbolesAzarososOptimizado.ipynb
+++ b/src/ensembles/420_ArbolesAzarososOptimizado.ipynb
@@ -94,7 +94,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "9LpZCst5a7Zs",
-        "outputId": "1b54eac1-62d5-42aa-e175-ad21e27e24e9",
+        "outputId": "0f9b0356-d272-411f-91e4-4606fc546eda",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -134,7 +134,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "XWLelftXa7Zt",
-        "outputId": "f7f2e21e-dd4a-4113-b17a-d0ce89823a4a",
+        "outputId": "a35039ef-35c9-49b6-825c-7fe8ea37d7d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -249,7 +249,7 @@
       ],
       "metadata": {
         "id": "LrdtraBYJrsx",
-        "outputId": "95a84814-626c-48c1-96df-9b7ce42133a1",
+        "outputId": "14f830c0-2434-49c4-b444-f13bed0a0660",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -261,12 +261,12 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "'Sun Oct 26 11:51:27 PM 2025'"
+              "'Mon Oct 27 11:28:56 PM 2025'"
             ],
-            "text/markdown": "'Sun Oct 26 11:51:27 PM 2025'",
-            "text/latex": "'Sun Oct 26 11:51:27 PM 2025'",
+            "text/markdown": "'Mon Oct 27 11:28:56 PM 2025'",
+            "text/latex": "'Mon Oct 27 11:28:56 PM 2025'",
             "text/plain": [
-              "[1] \"Sun Oct 26 11:51:27 PM 2025\""
+              "[1] \"Mon Oct 27 11:28:56 PM 2025\""
             ]
           },
           "metadata": {}
@@ -278,7 +278,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "1iE0U4_WCPRT",
-        "outputId": "478b5d96-770d-421f-e5fe-3fd70f97115d",
+        "outputId": "4e41acaf-0ba1-45c1-abfa-1d4e91cd2437",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
@@ -295,16 +295,16 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 660381</td><td>35.3</td><td>1454471</td><td>77.7</td><td>1454471</td><td>77.7</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 660381</td><td>35.3</td><td>1454451</td><td>77.7</td><td>1454451</td><td>77.7</td></tr>\n",
               "\t<tr><th scope=row>Vcells</th><td>1226627</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  660381 | 35.3 | 1454471 | 77.7 | 1454471 | 77.7 |\n| Vcells | 1226627 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  660381 & 35.3 & 1454471 & 77.7 & 1454471 & 77.7\\\\\n\tVcells & 1226627 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  660381 | 35.3 | 1454451 | 77.7 | 1454451 | 77.7 |\n| Vcells | 1226627 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  660381 & 35.3 & 1454451 & 77.7 & 1454451 & 77.7\\\\\n\tVcells & 1226627 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  660381 35.3 1454471    77.7 1454471  77.7\n",
+              "Ncells  660381 35.3 1454451    77.7 1454451  77.7\n",
               "Vcells 1226627  9.4 8388608    64.0 1975128  15.1"
             ]
           },
@@ -322,7 +322,7 @@
       "execution_count": 3,
       "metadata": {
         "id": "BJDwdD0dCPRU",
-        "outputId": "e4bf597e-4620-4d62-d353-1e1e3b0aa89b",
+        "outputId": "3afb5c46-3e92-4411-feb7-1d754298a747",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -378,7 +378,7 @@
       "metadata": {
         "id": "peRH7ySLCPRV"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -393,7 +393,7 @@
       "metadata": {
         "id": "1gZD6ZMvCPRV"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -405,7 +405,7 @@
       "metadata": {
         "id": "Xi0emX2ECPRV"
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -421,7 +421,7 @@
       "metadata": {
         "id": "RA3cSJ6KaGwA"
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -434,7 +434,7 @@
       "metadata": {
         "id": "EByLkVMwaC8K"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
       "metadata": {
         "id": "rHMrHwwpaB8D"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -459,7 +459,7 @@
       "metadata": {
         "id": "bJHS2aeghw6I"
       },
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -538,20 +538,20 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "9b63be64-13d1-4707-fb94-427de18b9c1d"
+        "outputId": "62a725f5-fa9f-4575-f8a2-15b799dc2707"
       },
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "'Mon Oct 27 01:26:25 AM 2025'"
+              "'Mon Oct 27 11:29:51 PM 2025'"
             ],
-            "text/markdown": "'Mon Oct 27 01:26:25 AM 2025'",
-            "text/latex": "'Mon Oct 27 01:26:25 AM 2025'",
+            "text/markdown": "'Mon Oct 27 11:29:51 PM 2025'",
+            "text/latex": "'Mon Oct 27 11:29:51 PM 2025'",
             "text/plain": [
-              "[1] \"Mon Oct 27 01:26:25 AM 2025\""
+              "[1] \"Mon Oct 27 11:29:51 PM 2025\""
             ]
           },
           "metadata": {}
@@ -577,9 +577,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qGdZKxo-R2p6",
-        "outputId": "f4c6ea13-d7c5-4406-8484-c671d784464d"
+        "outputId": "058b5ae8-025e-4e04-e853-002037f5267c"
       },
-      "execution_count": 27,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -815,7 +815,7 @@
       "metadata": {
         "id": "limXOsjVBjV3"
       },
-      "execution_count": 28,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -842,12 +842,8 @@
         "\n",
         "  set.seed(PARAM$semilla_primigenia)\n",
         "  cat(\"Iteracion: \", iteracion, \"\\n\")\n",
-        "  cat(\"Params: \", paste0(\"cp=\", x$cp, \"  minsplit=\", x$minsplit, \"  minbucket=\", x$minbucket, \" maxdepth=\", x$maxdepth, \"\" ), \"\\n\")\n",
+        "  cat(\"Parametros: \", paste0(\"cp=\", x$cp, \"  minsplit=\", x$minsplit, \"  minbucket=\", x$minbucket, \" maxdepth=\", x$maxdepth, \"\" ), \"\\n\")\n",
         "  flush.console()\n",
-        "\n",
-        "  seq(PARAM$num_trees_max)\n",
-        "\n",
-        "  arbolito <- 1\n",
         "\n",
         "  for (arbolito in seq(PARAM$num_trees_max) ) {\n",
         "    cat( arbolito, \"\")\n",
@@ -907,13 +903,13 @@
         "                        wait_seconds = 60)\n",
         "  cat(\"score reportado: \", score, \"\\n\")\n",
         "  flush.console()\n",
-        "  score\n",
+        "  score * 1000000\n",
         "}"
       ],
       "metadata": {
         "id": "TW-0H9us1j4m"
       },
-      "execution_count": 44,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -984,7 +980,7 @@
       "metadata": {
         "id": "lOVzHECRNUkm"
       },
-      "execution_count": 39,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -993,7 +989,7 @@
         "# Defino la  Optimizacion Bayesiana\n",
         "\n",
         "# cantidad de iteraciones de la Optimizacion Bayesiana\n",
-        "PARAM <- list()\n",
+        "#PARAM <- list()\n",
         "\n",
         "PARAM$semilla_primigenia <- 191717\n",
         "#PARAM$experimento <- \"HT420\"\n",
@@ -1016,6 +1012,7 @@
         "# leo si ya existe el log\n",
         "#  para retomar en caso que se se corte el programa\n",
         "GLOBAL_iteracion <- 0\n",
+        "\n",
         "GLOBAL_mejor <- -Inf\n",
         "\n",
         "if (file.exists(archivo_log)) {\n",
@@ -1058,12 +1055,27 @@
         "\n",
         "# inicio la optimizacion bayesiana\n",
         "if (!file.exists(archivo_BO)) {\n",
+        "  print(\"Iniciando busqueda nueva\")\n",
         "  bayesiana_salida <- mbo(\n",
         "    fun= obj.fun,\n",
         "    learner= surr.km,\n",
         "    control= ctrl\n",
         "  )\n",
         "} else {\n",
+        "  print(\"Retomando busqueda ya existente\")\n",
+        "  # intenta leer el numero de iteraciones\n",
+        "  inspect_env <- new.env()\n",
+        "  load(archivo_BO, envir = inspect_env)\n",
+        "\n",
+        "  obj_name <- ls(inspect_env)[1]\n",
+        "  cat(\"Loaded object name:\", obj_name, \"\\n\")\n",
+        "\n",
+        "  mbo_state <- get(obj_name, envir = inspect_env)\n",
+        "\n",
+        "  current_iterations <- getOptPathLength(mbo_state$opt.path)\n",
+        "  GLOBAL_iteracion <<- current_iterations\n",
+        "\n",
+        "  print(paste(\"Completed iterations:\", current_iterations))\n",
         "  bayesiana_salida <- mboContinue(archivo_BO)\n",
         "}\n",
         "# retomo en caso que ya exista\n",
@@ -1093,33 +1105,42 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 289
         },
         "id": "rUEdsTQsM-Ka",
-        "outputId": "4382cb95-bd8a-4b10-c399-52f70eb05ae4"
+        "outputId": "ff8f3e2f-73ce-444a-a368-9745fcb307bf"
       },
-      "execution_count": 45,
+      "execution_count": 17,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Computing y column(s) for design. Not provided.\n",
-            "\n",
-            "Mon Oct 27 01:53:35 AM 2025\n",
-            "\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Iteracion:  1 \n",
-            "Params:  cp=-0.190153969467792  minsplit=6173  minbucket=430 maxdepth=5 \n",
-            "finalizo construccion de arbolitos\n"
+            "[1] \"Retomando busqueda ya existente\"\n",
+            "Loaded object name: opt.state \n",
+            "[1] \"Completed iterations: 36\"\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ERROR",
+          "evalue": "Error: Test\n",
+          "traceback": [
+            "Error: Test\nTraceback:\n",
+            "1. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"Test\", base::quote(eval(expr, envir)))"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2EJMWKbG9WMk"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
