--- a/src/ensembles/440_RandomForest.ipynb
+++ b/src/ensembles/440_RandomForest.ipynb
@@ -125,11 +125,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "9LpZCst5a7Zs"
+        "id": "9LpZCst5a7Zs",
+        "outputId": "97cec2cb-2056-4b66-f936-bee3b30b9e06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/.drive\n"
+          ]
+        }
+      ],
       "source": [
         "# primero establecer el Runtime de Python 3\n",
         "from google.colab import drive\n",
@@ -153,11 +165,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "XWLelftXa7Zt"
+        "id": "XWLelftXa7Zt",
+        "outputId": "777d53fd-9075-43c5-a991-b60e28a751a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "%%shell\n",
         "\n",
@@ -232,18 +257,69 @@
         "format(Sys.time(), \"%a %b %d %X %Y\")"
       ],
       "metadata": {
-        "id": "54xgC6vpObNA"
+        "id": "54xgC6vpObNA",
+        "outputId": "32390a6c-8f74-4d9d-83cb-f57a975db37b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "'Wed Oct 29 12:18:27 AM 2025'"
+            ],
+            "text/markdown": "'Wed Oct 29 12:18:27 AM 2025'",
+            "text/latex": "'Wed Oct 29 12:18:27 AM 2025'",
+            "text/plain": [
+              "[1] \"Wed Oct 29 12:18:27 AM 2025\""
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "1iE0U4_WCPRT"
+        "id": "1iE0U4_WCPRT",
+        "outputId": "b7b83b7b-3855-4b03-dea9-b94520b3c646",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<table class=\"dataframe\">\n",
+              "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+              "<thead>\n",
+              "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 660381</td><td>35.3</td><td>1454457</td><td>77.7</td><td>1454457</td><td>77.7</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1226627</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
+              "</tbody>\n",
+              "</table>\n"
+            ],
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  660381 | 35.3 | 1454457 | 77.7 | 1454457 | 77.7 |\n| Vcells | 1226627 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  660381 & 35.3 & 1454457 & 77.7 & 1454457 & 77.7\\\\\n\tVcells & 1226627 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/plain": [
+              "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+              "Ncells  660381 35.3 1454457    77.7 1454457  77.7\n",
+              "Vcells 1226627  9.4 8388608    64.0 1975128  15.1"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "# limpio la memoria\n",
         "rm(list=ls(all.names=TRUE)) # remove all objects\n",
@@ -263,9 +339,34 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "BJDwdD0dCPRU"
+        "id": "BJDwdD0dCPRU",
+        "outputId": "26b03b3b-2aa7-4b2f-b42a-343d3ee7a3f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Loading required package: data.table\n",
+            "\n",
+            "Loading required package: rpart\n",
+            "\n",
+            "Loading required package: ranger\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘ranger’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependency ‘RcppEigen’\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# cargo las librerias que necesito\n",
         "require(\"data.table\")\n",
@@ -294,7 +395,7 @@
       "source": [
         "PARAM <- list()\n",
         "PARAM$experimento <- 440\n",
-        "PARAM$semilla_primigenia <- 102191\n",
+        "PARAM$semilla_primigenia <- 191717\n",
         "\n",
         "PARAM$ranger$num.trees <- 300 # cantidad de arboles\n",
         "PARAM$ranger$mtry <- 13 # cantidad de atributos que participan en cada split\n",
