--- a/src/ensembles/594_TareaHogar_05.ipynb
+++ b/src/ensembles/594_TareaHogar_05.ipynb
@@ -6,11 +6,11 @@
       "provenance": []
     },
     "kernelspec": {
-      "name": "ir",
-      "display_name": "R"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "language_info": {
-      "name": "R"
+      "name": "python"
     }
   },
   "cells": [
@@ -171,7 +171,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "9LpZCst5a7Zs",
-        "outputId": "c4f522e6-37ee-4a70-8eea-71fdad66a49e",
+        "outputId": "cd9d9043-0892-4209-9df5-2c874de62f8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -211,7 +211,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "XWLelftXa7Zt",
-        "outputId": "e9675486-fbab-4cb7-c327-a8546f29e4ac",
+        "outputId": "1f636d97-5c32-4453-94d7-732c5d10c9ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -301,27 +301,24 @@
       ],
       "metadata": {
         "id": "gBq__iAdQliq",
-        "outputId": "140433d4-9033-40ff-c6b9-ceb84653befa",
+        "outputId": "c19b5e9c-2e90-41e4-88e3-ce2443ccd1a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 145
         }
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "'Fri Oct 31 12:07:56 AM 2025'"
-            ],
-            "text/markdown": "'Fri Oct 31 12:07:56 AM 2025'",
-            "text/latex": "'Fri Oct 31 12:07:56 AM 2025'",
-            "text/plain": [
-              "[1] \"Fri Oct 31 12:07:56 AM 2025\""
-            ]
-          },
-          "metadata": {}
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'Sys' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1319338482.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"%a %b %d %X %Y\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'Sys' is not defined"
+          ]
         }
       ]
     },
@@ -340,7 +337,7 @@
           "height": 129
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -470,10 +467,20 @@
       "cell_type": "code",
       "source": [
         "PARAM$kaggle$competencia <- \"labo-i-2025-virtual-analista-sr\"\n",
-        "PARAM$kaggle$cortes <- seq(10000, 12000, by= 500)"
+        "#PARAM$kaggle$cortes <- seq(10000, 12000, by= 500) !!\n",
+        "PARAM$kaggle$cortes <- seq(500, 4000, by= 500)"
       ],
       "metadata": {
         "id": "ezOhQdbA293o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pCCXKvf9LCBj"
       },
       "execution_count": null,
       "outputs": []
@@ -501,7 +508,8 @@
         "\n",
         "# parametros fijos del LightGBM que se pisaran con la parte variable de la BO\n",
         "PARAM$lgbm$param_fijos <-  list(\n",
-        "  boosting= \"gbdt\", # puede ir  dart  , ni pruebe random_forest\n",
+        " #boosting= \"gbdt\", # puede ir  dart  , ni pruebe random_forest\n",
+        "  boosting= \"dart\", # puede ir  dart  , ni pruebe random_forest !!\n",
         "  objective= \"binary\",\n",
         "  metric= \"auc\",\n",
         "  first_metric_only= FALSE,\n",
@@ -519,9 +527,12 @@
         "  lambda_l2= 0.0, # lambda_l2 >= 0.0\n",
         "  max_bin= 31L, # lo debo dejar fijo, no participa de la BO\n",
         "\n",
-        "  bagging_fraction= 1.0, # 0.0 < bagging_fraction <= 1.0\n",
-        "  pos_bagging_fraction= 1.0, # 0.0 < pos_bagging_fraction <= 1.0\n",
-        "  neg_bagging_fraction= 1.0, # 0.0 < neg_bagging_fraction <= 1.0\n",
+        "  #bagging_fraction= 1.0, # 0.0 < bagging_fraction <= 1.0 !!\n",
+        "  bagging_fraction= 0.7, # 0.0 < bagging_fraction <= 1.0\n",
+        "  #pos_bagging_fraction= 1.0, # 0.0 < pos_bagging_fraction <= 1.0 !!!\n",
+        "  pos_bagging_fraction= 0.7, # 0.0 < pos_bagging_fraction <= 1.0\n",
+        "  #neg_bagging_fraction= 1.0, # 0.0 < neg_bagging_fraction <= 1.0 !!!\n",
+        "  neg_bagging_fraction= 0.7, # 0.0 < neg_bagging_fraction <= 1.0\n",
         "  is_unbalance= FALSE, #\n",
         "  scale_pos_weight= 1.0, # scale_pos_weight > 0.0\n",
         "\n",
@@ -530,6 +541,8 @@
         "  skip_drop= 0.5, # 0.0 <= skip_drop <= 1.0\n",
         "\n",
         "  extra_trees= FALSE,\n",
+        "\n",
+        "  early_stopping_round = 2, #!!\n",
         "\n",
         "  num_iterations= 1200,\n",
         "  learning_rate= 0.02,\n",
@@ -563,9 +576,11 @@
         "PARAM$hypeparametertuning$hs <- makeParamSet(\n",
         "  makeIntegerParam(\"num_iterations\", lower= 8L, upper= 2048L),\n",
         "  makeNumericParam(\"learning_rate\", lower= 0.01, upper= 0.3),\n",
-        "  makeNumericParam(\"feature_fraction\", lower= 0.1, upper= 1.0),\n",
-        "  makeIntegerParam(\"num_leaves\", lower= 8L, upper= 2048L),\n",
-        "  makeIntegerParam(\"min_data_in_leaf\", lower= 1L, upper= 8000L)\n",
+        "  #makeNumericParam(\"feature_fraction\", lower= 0.1, upper= 1.0), !!\n",
+        "  #makeIntegerParam(\"num_leaves\", lower= 8L, upper= 3048L), !!\n",
+        "  makeIntegerParam(\"num_leaves\", lower= 64L, upper= 3048L),\n",
+        "  #makeIntegerParam(\"min_data_in_leaf\", lower= 1L, upper= 8000L) !!\n",
+        "  makeIntegerParam(\"min_data_in_leaf\", lower= 32L, upper= 8000L)\n",
         ")"
       ],
       "metadata": {
@@ -588,7 +603,8 @@
     {
       "cell_type": "code",
       "source": [
-        "PARAM$hyperparametertuning$iteraciones <- 30 # iteraciones bayesianas"
+        "#PARAM$hyperparametertuning$iteraciones <- 30 # iteraciones bayesianas !!\n",
+        "PARAM$hyperparametertuning$iteraciones <- 50 # iteraciones bayesianas"
       ],
       "metadata": {
         "id": "q5Rd3pnbzSiG"
