parameter tunning changes

--- a/src/ensembles/594_TareaHogar_05.ipynb
+++ b/src/ensembles/594_TareaHogar_05.ipynb
@@ -6,11 +6,11 @@
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "name": "ir",
+      "display_name": "R"
     },
     "language_info": {
-      "name": "python"
+      "name": "R"
     }
   },
   "cells": [
@@ -301,24 +301,27 @@
       ],
       "metadata": {
         "id": "gBq__iAdQliq",
-        "outputId": "c19b5e9c-2e90-41e4-88e3-ce2443ccd1a9",
+        "outputId": "f87d6925-c92f-4aee-aacd-75439546f5bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 145
+          "height": 34
         }
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'Sys' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1319338482.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"%a %b %d %X %Y\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'Sys' is not defined"
-          ]
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "'Mon Nov 03 08:14:43 PM 2025'"
+            ],
+            "text/markdown": "'Mon Nov 03 08:14:43 PM 2025'",
+            "text/latex": "'Mon Nov 03 08:14:43 PM 2025'",
+            "text/plain": [
+              "[1] \"Mon Nov 03 08:14:43 PM 2025\""
+            ]
+          },
+          "metadata": {}
         }
       ]
     },
@@ -331,13 +334,13 @@
       ],
       "metadata": {
         "id": "7rdVrBojS1IV",
-        "outputId": "a6009858-5bb0-437c-b148-5f5e431f3cf6",
+        "outputId": "995b6b3f-4c17-4708-a1f1-467be2f45dbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -349,16 +352,16 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 660381</td><td>35.3</td><td>1454462</td><td>77.7</td><td>1454462</td><td>77.7</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 660381</td><td>35.3</td><td>1454460</td><td>77.7</td><td>1454460</td><td>77.7</td></tr>\n",
               "\t<tr><th scope=row>Vcells</th><td>1226627</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  660381 | 35.3 | 1454462 | 77.7 | 1454462 | 77.7 |\n| Vcells | 1226627 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  660381 & 35.3 & 1454462 & 77.7 & 1454462 & 77.7\\\\\n\tVcells & 1226627 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  660381 | 35.3 | 1454460 | 77.7 | 1454460 | 77.7 |\n| Vcells | 1226627 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  660381 & 35.3 & 1454460 & 77.7 & 1454460 & 77.7\\\\\n\tVcells & 1226627 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-              "Ncells  660381 35.3 1454462    77.7 1454462  77.7\n",
+              "Ncells  660381 35.3 1454460    77.7 1454460  77.7\n",
               "Vcells 1226627  9.4 8388608    64.0 1975128  15.1"
             ]
           },
@@ -405,12 +408,12 @@
       ],
       "metadata": {
         "id": "lVyxLaJ1j1J_",
-        "outputId": "fdbef366-f4f5-45a1-f1d9-e8a05b77614a",
+        "outputId": "5f31e625-e75f-47e3-e2fd-ac47a7ac7d4b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,6 +429,69 @@
             "“there is no package called ‘primes’”\n",
             "Installing package into ‘/usr/local/lib/R/site-library’\n",
             "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Loading required package: primes\n",
+            "\n",
+            "Loading required package: rlist\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘rlist’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependency ‘XML’\n",
+            "\n",
+            "\n",
+            "Loading required package: rlist\n",
+            "\n",
+            "Loading required package: yaml\n",
+            "\n",
+            "Loading required package: lightgbm\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘lightgbm’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Loading required package: lightgbm\n",
+            "\n",
+            "Loading required package: DiceKriging\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘DiceKriging’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Loading required package: DiceKriging\n",
+            "\n",
+            "Loading required package: mlrMBO\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘mlrMBO’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependencies ‘fastmatch’, ‘RcppArmadillo’, ‘mlr’, ‘ParamHelpers’, ‘smoof’, ‘BBmisc’, ‘checkmate’, ‘lhs’, ‘parallelMap’\n",
+            "\n",
+            "\n",
+            "Loading required package: mlrMBO\n",
+            "\n",
+            "Loading required package: mlr\n",
+            "\n",
+            "Loading required package: ParamHelpers\n",
+            "\n",
+            "Loading required package: smoof\n",
+            "\n",
+            "Loading required package: checkmate\n",
+            "\n",
+            "\n",
+            "Attaching package: ‘checkmate’\n",
+            "\n",
+            "\n",
+            "The following object is masked from ‘package:DiceKriging’:\n",
+            "\n",
+            "    checkNames\n",
+            "\n",
             "\n"
           ]
         }
@@ -460,7 +526,7 @@
       "metadata": {
         "id": "ASYkebOu2mF6"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -468,12 +534,12 @@
       "source": [
         "PARAM$kaggle$competencia <- \"labo-i-2025-virtual-analista-sr\"\n",
         "#PARAM$kaggle$cortes <- seq(10000, 12000, by= 500) !!\n",
-        "PARAM$kaggle$cortes <- seq(500, 4000, by= 500)"
+        "PARAM$kaggle$cortes <- seq(500, 6000, by= 500)"
       ],
       "metadata": {
         "id": "ezOhQdbA293o"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -496,7 +562,7 @@
       "metadata": {
         "id": "jtB0Lub42rHO"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -542,7 +608,7 @@
         "\n",
         "  extra_trees= FALSE,\n",
         "\n",
-        "  early_stopping_round = 2, #!!\n",
+        "  early_stopping_round = 3, #!!\n",
         "\n",
         "  num_iterations= 1200,\n",
         "  learning_rate= 0.02,\n",
@@ -554,7 +620,7 @@
       "metadata": {
         "id": "OFxm-xiNUOJX"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
